# RadixGraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  distribution.py  memory_footprint.py  optimizer.cpp  optimizer.py  optimizer_dp.cpp  optimizer_dp.py  optimizer_kkt.py  plot_memory_log.py  plot_workload_log.py  reproduce.ipynb  workload_generator.py
.github/workflows/: cmake-multi-platform.yml
examples/: concurrent.cpp  parallel.cpp  single-thread.cpp
src/: adj_list.cpp  adj_list.h  art.cpp  art.h  forward_star.cpp  forward_star.h  headers.h  main.cpp  optimized_trie.cpp  optimized_trie.h  optimizer.h  radixgraph.cpp  radixgraph.h  sort.cpp  sort.h  test_analytics.cpp  test_batch_updates.cpp  test_gapbs.cpp  test_radixgraph.cpp  test_transform.cpp  test_transform_continuous.cpp  test_trie.cpp  test_trie_workload.cpp  test_vertex_index.cpp  test_workload.cpp  utils.cpp  utils.h  vertex_array.cpp  vertex_array.h
src/GAPBS/: bc.cc  bc.h  benchmark.h  bfs.cc  bfs.h  bitmap.h  cc.cc  cc_sv.cc  cc_sv.h  converter.cc  platform_atomics.h  pr.cc  pr_spmv.cc  pr_spmv.h  sssp.cc  sssp.h  tc.cc  tc.h
